apps/headlamp/manifests/httproute.yaml
---
# yaml-language-server: $schema=https://kube-schemas.shold.io/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: headlamp
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
  hostnames:
    - headlamp.mgmt.sholdee.net
  rules:
    - backendRefs:
        - name: headlamp
          namespace: headlamp
          port: 80
